--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -14,8 +14,12 @@
     </thead>
     <tbody>
     <tr th:each="q : ${questionList}">
-        <td th:text="${q.id}"></td>
-        <td th:text="${q.subject}"></td>
+        <td>
+            <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.id}"></a>
+        </td>
+        <td>
+            <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
+        </td>
         <td th:text="${q.createTime}"></td>
     </tr>
     </tbody>
