--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,11 +1,8 @@
-<h1>질문 리스트</h1>
-<table border="1">
-    <colgroup>
-        <col width="60px">
-        <col width="250px">
-        <col width="300px">
-    </colgroup>
-    <thead>
+<html layout:decorate="~{layout}">
+
+<div layout:fragment="content" class="container my-3">
+<table class="table">
+    <thead class="table-info">
     <tr>
         <th>번호</th>
         <th>제목</th>
@@ -13,14 +10,17 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="q : ${questionList}">
+    <tr th:each="q, loop : ${questionList}">
         <td>
-            <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.id}"></a>
+            <a th:text="${loop.count}" th:href="@{|/question/detail/${q.id}|}"></a>
         </td>
         <td>
             <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
         </td>
-        <td th:text="${q.createTime}"></td>
+        <td th:text="${#temporals.format(q.createTime, 'yyyy-MM-dd HH:mm')}"></td>
     </tr>
     </tbody>
 </table>
+</div>
+
+</html>
