--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,6 +6,10 @@
 
     <!-- 모바일 디바이스에서 화면이 축소되는 것을 방지 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap JS -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- sbb CSS -->
@@ -14,14 +18,7 @@
 </head>
 <body>
 
-<div class="container">
-    <h1>SB, Q&A BOARD!!</h1>
-    <ul class="d-flex" style="gap:30px">
-        <li><a href="/question/list">리스트</a></li>
-        <li><a href="/question/create">질문등록</a></li>
-        <li><a href="sbb">SBB! 란</a></li>
-    </ul>
-</div>
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 <th:block layout:fragment="content"></th:block>
