작성일시 정렬

--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,52 +1,52 @@
 <html layout:decorate="~{layout}">
 
 <div layout:fragment="content" class="container my-3">
-    <table class="table">
-        <thead class="table-info">
-        <tr>
-            <td>속성</td>
-            <td>설명</td>
-            <td>값</td>
-        </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th>paging.isEmpty</th>
-                <td>페이지 존재 여부(게시물이 있으면 false, 없으면 true)</td>
-                <td>[[${paging.isEmpty}]]</td>
-            </tr>
-            <tr>
-                <th>paging.totalElements</th>
-                <td>전체 게시물 개수</td>
-                <td th:text="${paging.totalElements}"> </td>
-            </tr>
-            <tr>
-                <th>paging.totalPages</th>
-                <td>전체 페이지 개수</td>
-                <td th:text="${paging.totalPages}"> </td>
-            </tr>
-            <tr>
-                <th>paging.size</th>
-                <td>페이지당 보여 줄 게시물 개수</td>
-                <td th:text="${paging.size}"> </td>
-            </tr>
-            <tr>
-                <th>paging.number</th>
-                <td>현재 페이지 번호(0부터 시작)</td>
-                <td th:text="${paging.number}"> </td>
-            </tr>
-            <tr>
-                <th>paging.hasPrevious</th>
-                <td>이전 페이지의 존재 여부(존재 하면 true, 존재 하지 않으면 false)</td>
-                <td th:text="${paging.hasPrevious}"> </td>
-            </tr>
-            <tr>
-                <th>paging.hasNext</th>
-                <td>다음 페이지의 존재 여부(존재 하면 true, 존재 하지 않으면 false)</td>
-                <td th:text="${paging.hasNext}"> </td>
-            </tr>
-        </tbody>
-    </table>
+<!--    <table class="table">-->
+<!--        <thead class="table-info">-->
+<!--        <tr>-->
+<!--            <td>속성</td>-->
+<!--            <td>설명</td>-->
+<!--            <td>값</td>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--            <tr>-->
+<!--                <th>paging.isEmpty</th>-->
+<!--                <td>페이지 존재 여부(게시물이 있으면 false, 없으면 true)</td>-->
+<!--                <td>[[${paging.isEmpty}]]</td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.totalElements</th>-->
+<!--                <td>전체 게시물 개수</td>-->
+<!--                <td th:text="${paging.totalElements}"> </td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.totalPages</th>-->
+<!--                <td>전체 페이지 개수</td>-->
+<!--                <td th:text="${paging.totalPages}"> </td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.size</th>-->
+<!--                <td>페이지당 보여 줄 게시물 개수</td>-->
+<!--                <td th:text="${paging.size}"> </td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.number</th>-->
+<!--                <td>현재 페이지 번호(0부터 시작)</td>-->
+<!--                <td th:text="${paging.number}"> </td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.hasPrevious</th>-->
+<!--                <td>이전 페이지의 존재 여부(존재 하면 true, 존재 하지 않으면 false)</td>-->
+<!--                <td th:text="${paging.hasPrevious}"> </td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--                <th>paging.hasNext</th>-->
+<!--                <td>다음 페이지의 존재 여부(존재 하면 true, 존재 하지 않으면 false)</td>-->
+<!--                <td th:text="${paging.hasNext}"> </td>-->
+<!--            </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
 <table class="table">
     <thead class="table-info">
     <tr>
@@ -67,6 +67,28 @@
     </tr>
     </tbody>
 </table>
+
+    <nav th:if="${!paging.isEmpty}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a th:href="@{|?page=${paging.number -1}|}" class="page-link">
+                    <span>&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item"
+                th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:if="${page >= paging.number - 5 and page <= paging.number + 5}"
+                th:classappend="${page == paging.number} ? active">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a th:href="@{|?page=${paging.number +1}|}" class="page-link">
+                    <span>&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
     <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 </div>
 
