답변 개수 표시

--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -58,10 +58,15 @@
     <tbody>
     <tr th:each="q, loop : ${paging}">
         <td>
-            <a th:text="${loop.count}" th:href="@{|/question/detail/${q.id}|}"></a>
+<!--            <a th:text="${q.id}"></a>-->
+            <a th:text="${paging.totalElements - (paging.number * paging.size) - loop.index}" th:href="@{|/question/detail/${q.id}|}"></a>
         </td>
         <td>
             <a th:href="@{|/question/detail/${q.id}|}" th:text="${q.subject}"></a>
+            <span class="text-danger small ms-2"
+                th:if="${#lists.size(q.answerList) > 0}"
+                th:text="${#lists.size(q.answerList)}">
+            </span>
         </td>
         <td th:text="${#temporals.format(q.createTime, 'yyyy-MM-dd HH:mm')}"></td>
     </tr>
